--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -45,6 +45,12 @@
             });
         }
 
+        function verifyEntryFee() {
+            $.ajax({
+                url: "/admin/contests/verify_entry_fee"
+            });
+        }
+
     </script>
 }
 
@@ -53,6 +59,7 @@
 @if(model.Model.isLocalHostTargetEnvironment()) {
 <div style="float: right; margin-right:100px;">
     <button class="btn btn-primary" onclick="verifyPrizes()">Verify Prizes</button>
+    <button class="btn btn-primary" onclick="verifyEntryFee()">Verify EntryFee</button>
 </div>
 }
 
