--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -67,6 +67,7 @@
                 <li><a href="@UserController.index">Users</a></li>
                 <li><a href="@RefundController.index">Refunds</a></li>
                 <li><a href="@PromoController.index">Promos</a></li>
+                <li><a href="@BonusController.index">Bonus</a></li>
                 <li><a href="@PointsTranslationController.index">Points Translations</a></li>
                 <li><a href="@ContestController.index">Contests</a></li>
             </ul>
